# full-stack-fastapi-postgresql

./: .gitignore  README.md
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/frontend/: Dockerfile
