[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inboard = {version = "^0.26", extras = ["fastapi"]}
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.28.0"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.0"
emails = "^0.6"
raven = "^6.10.0"
jinja2 = "^3.1.2"
alembic = "^1.8.1"
sqlalchemy = {extras = ["postgresql_psycopg2binary"], version = "~1.4"}
pytest = "^7.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22"
isort = "^5.10.1"
autoflake = "^1.3"
flake8 = "^4.0.1"
pytest = "^7.1.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
